<resources>
    <string name="app_name">CrypText</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="search_chats">Search chats</string>
    <string name="new_chat">New Chat</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="email_hint">Enter email address</string>
    <string name="password_hint">Enter password</string>
    <string name="recipient_email">Recipient email</string>
    <string name="start_chat">Start Chat</string>
    <string name="message_hint">Type a message</string>
    <string name="send">Send</string>
    <string name="no_chats">No chats available</string>
    <string name="default_web_client_id" translatable="false">YOUR_WEB_CLIENT_ID</string>
</resources>